framework/src/main/java/org/example/framework/error/ErrorMessageInitializer.java
package org.example.framework.error;

public interface ErrorMessageInitializer extends ErrorMessage {

  void initialize();

  void addMessage(String code, String message);
}
